--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -1,3 +1,31 @@
 {
-  "website.welcome.message": "Welkom!"
+  "website": {
+    "welcome.message": "Welkom!",
+    "welcome.part1": "Ik ben Dieter Jordens. Dit is mijn online portfolio.",
+    "welcome.part2": "Ik ben 26 jaar oud en woon momenteel in Geetbets, België.... in de nabijheid van Leuven, Brussel en Hasselt. Ik ben gepassioneerd door agile software ontwikkeling (full stack) en artificiële intelligentie.",
+    "learn.more.about.me": "Meer informatie",
+    "change.language": "Verander taal",
+    "home": "Startpagina",
+    "about": "Over mezelf",
+    "timeline": "Tijdlijn",
+    "cv": "Curriculum vitae",
+    "data": "Meer gegevens",
+    "what.to.expect.of.me": "Wat kun je van mij verwachten?",
+    "what.is.my.vision": "Software ontwikkeling is een ambacht!",
+    "what.is.my.mission": "Als Software Ingenieur probeer ik de lat van professionele software ontwikkeling hoger te leggen door het in de praktijk te brengen en anderen te helpen om het vak te leren. Ik probeer de waarden uit het Software Craftsmanship Manifesto toe te passen in mijn dagelijks werk.",
+    "well.crafted.software.title": "Goed ontworpen software",
+    "well.crafted.software.part1": "Mijn missie is het afleveren van hoogwaardige software. Ik ben nederig over mijn expertise en eerlijk over mijn capaciteiten.",
+    "well.crafted.software.part2": "Ik probeer een expert te zijn in wat ik doe en de technologieën en technieken te beheersen die ik nodig heb om mijn werk uit te voeren.",
+    "well.crafted.software.part3": "Ik neem de volledige verantwoordelijkheid voor de correctheid van de code die we in ons team schrijven. Ik tolereer geen vermijdbare bugs. Ik heb oog voor detail in code reviews en probeer onze code grondig te testen.",
+    "steadily.adding.value.title": "Geleidelijk waarde toevoegen",
+    "steadily.adding.value.part1": "Ik maak met toewijding schattingen. Ik word niet gemakkelijk beïnvloed door druk of angst. Ik zorg ervoor dat ik alles begrijp wat er nodig is om een schatting te maken voordat ik deze geef.",
+    "steadily.adding.value.part2": "Ik streef ernaar om mijn uiterste best te doen op een vol te houden tempo.",
+    "community.of.professionals.title": "Een gemeenschap van professionals",
+    "community.of.professionals.part1": "Ik omarm verschillende meningen en persoonlijkheden. Ik laat de huidige manier van werken verbeteringen niet in de weg staan.",
+    "community.of.professionals.part2": "Ik ben bereid om mijn kennis te delen met iedereen die de bereidheid heeft om te leren. Ik deel mijn good practices en kennis en probeer zelf van iedereen te leren.",
+    "productive.partnerships.title": "Productieve partnerschappen",
+    "productive.partnerships.part1": "Ik toon respect voor de klant en collega-softwaremakers. Ik probeer me elke dag professioneel en ethisch te gedragen.",
+    "productive.partnerships.part2": "Ik ben open en eerlijk naar de klant toe. Ik verberg noch verfraai niet.",
+    "productive.partnerships.part3": "Ik probeer me altijd in het belang van de klant te vinden om een langdurige relatie op te bouwen."
+  }
 }
