--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -1,15 +1,17 @@
 {
   "website": {
     "welcome.message": "Bienvenue!",
-    "welcome.part1": "Je suis Dieter Jordens. Voici mon portfolio en ligne.",
-    "welcome.part2": "J'ai 26 ans et j'habite actuellement à Geetbets, en Belgique... à proximité de Louvain, Bruxelles et Hasselt. Je suis passionné par le développement agile (full stack) et l'intelligence artificielle.",
-    "learn.more.about.me": "En savoir plus",
+    "introduction.message": "Je suis Dieter Jordens. Voici mon portfolio en ligne.",
+    "details.message": "J'ai {{age}} ans et j'habite actuellement à Geetbets, en Belgique... à proximité de Louvain, Bruxelles et Hasselt. Je suis passionné par le développement agile (full stack) et l'intelligence artificielle.",
+    "learn.more.about.my.vision": "Ma vision",
     "change.language": "Changer de langue",
     "home": "Page d'accueil",
-    "about": "Mon profil",
-    "timeline": "Chronologie",
+    "vision": "Ma vision",
     "cv": "CV",
-    "data": "Plus de données",
+    "timeline": "Chronologie",
+    "data": "Plus de données"
+  },
+  "my.vision": {
     "what.to.expect.of.me": "Que pouvez-vous attendre de moi?",
     "what.is.my.vision": "Le développement de logiciels est un métier!",
     "what.is.my.mission": "En tant qu'artisan de logiciels, j'essaie d'élever la barre du développement de logiciels professionnels en le pratiquant et en aidant les autres à apprendre le métier. J'essaie d'appliquer les valeurs du Manifeste de l'artisanat logiciel dans mon travail quotidien.",
@@ -22,10 +24,41 @@
     "steadily.adding.value.part2": "Je m'efforce de donner le meilleur de moi-même à un rythme durable.",
     "community.of.professionals.title": "Une communauté de professionnels",
     "community.of.professionals.part1": "J'embrasse différentes opinions et personnalités. Je ne laisse pas la façon actuelle de travailler entraver les améliorations.",
-    "community.of.professionals.part2": "Je suis prêt à partager mes connaissances avec toute personne désireuse d'apprendre. Je partage mes bonnes pratiques et mes connaissances et j'essaie d'apprendre de tout le monde moi-même.",
+    "community.of.professionals.part2": "Je suis prêt à partager mes connaissances avec toute personne désireuse d'apprendre. Je partage mes bonnes pratiques, mes connaissances et j'essaie d'apprendre de tout le monde moi-même.",
     "productive.partnerships.title": "Partenariats productifs",
     "productive.partnerships.part1": "J'ai du respect pour le client et les autres concepteurs de logiciels. J'essaie de me comporter de façon professionnelle et éthique tous les jours.",
     "productive.partnerships.part2": "Je suis ouvert et honnête avec le client. Je ne cache ni n'embellis.",
     "productive.partnerships.part3": "J'essaie toujours de me trouver dans l'intérêt du client afin de construire une relation à long terme."
+  },
+  "cv": {
+    "image": "Curriculum Vitae image",
+    "current.role": "Java Software Craftsman",
+    "about.part1": "Dieter est un développeur de logiciels agile passionné et porte fièrement le titre d'ingénieur civil.",
+    "about.part2": "Dans le cadre de son projet actuel, Dieter travaille pour le Service Public Fédéral Justice, où il aide à développer une application stimulante pour le traitement et le stockage des documents.",
+    "body": "Hi Dieter%0A%0AJ'aimerais%20avoir%20accès%20à%20votre%20CV%20personnel%20pour<remplir-la-raison>.%0AMeilleures%20salutations%0A%0A<remplir-le-nom>",
+    "receive": "Recevoir le CV complet",
+    "expertise": "Expertise",
+    "back-end": "Back-end",
+    "back-end.detail": "Expérience principalement avec Spring, Java et d'autres frameworks connexes.",
+    "front-end": "Front-end",
+    "front-end.detail": "La préférence va aux cadres modernes comme Angular, mais Dieter a aussi de l'expérience avec des technologies plus anciennes.",
+    "quality-management": "Gestion de la qualité",
+    "quality-management.detail": "La qualité est une priorité, c'est pourquoi Dieter attache une grande importance aux tests unitaires, d'intégration et e2e.",
+    "data-technologies": "Technologies de données",
+    "data-technologies.detail": "Dieter a déjà une certaine expérience avec SQL (e.g. IBM DB2, MySQL) et NoSQL (e.g. CouchDB).",
+    "work.experience": "Expérience de travail",
+    "work.experience1.date": "2016 à ce jour",
+    "work.experience1.title": "Java Software Craftsman",
+    "work.experience1.employer": "Continuum Consulting NV",
+    "work.experience1.place": "Lummen, Belgique",
+    "education": "Education",
+    "education1.date": "2016",
+    "education1.title": "Maîtrise en Ingénierie: Informatique, Intelligence Artificielle",
+    "education1.employer": "Université de Louvain",
+    "education1.place": "Louvain, Belgique",
+    "education2.date": "2014",
+    "education2.title": "Bachelière en Sciences: Informatique, TIC",
+    "education2.employer": "Université d'Hasselt",
+    "education2.place": "Diepenbeek, Belgique"
   }
 }
