--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -1,7 +1,7 @@
 {
   "website": {
     "welcome.message": "Hi there!",
-    "introduction.message": "I am Dieter Jordens. This is my online portfolio.",
+    "introduction.message": "I am Dieter Jordens. This is my online portfolio. Unfortunately, there is not much to see here at the moment, so be sure to come back in the future.",
     "details.message": "I'm {{age}} years old and currently living in Geetbets, Belgium... in a close proximity of Leuven, Brussels and Hasselt. I'm passionate about full stack agile development and artificial intelligence.",
     "learn.more.about.my.vision": "My vision",
     "change.language": "Change language",
