--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -1,7 +1,7 @@
 {
   "website": {
     "welcome.message": "Welkom!",
-    "introduction.message": "Ik ben Dieter Jordens. Dit is mijn online portfolio.",
+    "introduction.message": "Ik ben Dieter Jordens. Dit is mijn online portfolio. Momenteel is hier helaas nog niet veel te zien, kom in de toekomst zeker eens terug.",
     "details.message": "Ik ben {{age}} jaar oud en woon momenteel in Geetbets, België.... in de nabijheid van Leuven, Brussel en Hasselt. Ik ben gepassioneerd door agile software ontwikkeling (full stack) en artificiële intelligentie.",
     "learn.more.about.my.vision": "Mijn visie",
     "change.language": "Verander taal",
