DJ-3 graphical and test update

--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -1,64 +1,58 @@
 {
-  "website": {
-    "welcome.message": "Finally, you're here...",
-    "introduction.message": "I am Dieter Jordens. This is my online portfolio. Unfortunately, there is not much to see here at the moment, so be sure to come back in the future.",
-    "details.message": "I'm {{age}} years old and currently living in Geetbets, Belgium... in a close proximity of Leuven, Brussels and Hasselt. I'm passionate about full stack agile development and artificial intelligence.",
-    "learn.more.about.my.vision": "My vision",
-    "change.language": "Change language",
-    "home": "Homepage",
-    "vision": "My vision",
-    "cv": "CV",
-    "timeline": "Timeline",
-    "data": "More data"
-  },
-  "my.vision": {
-    "what.to.expect.of.me": "What can you expect of me?",
-    "what.is.my.vision": "Software Development is a craft!",
-    "what.is.my.mission": "As a Software Craftsman I try to raise the bar of professional software development by practicing it and helping others to learn the craft. I try to apply the values in the Manifesto for Software Craftsmanship in my daily work.",
-    "well.crafted.software.title": "Well-crafted software",
-    "well.crafted.software.part1": "My mission is to deliver high quality software. I am humble about my expertise and honest about my capabilities.",
-    "well.crafted.software.part2": "I try to be an expert in what I do and to master the technologies and techniques I need to perform my job.",
-    "well.crafted.software.part3": "I take full responsibility for the correctness of the code we write in our team. I do not tolerate preventable defects. I have an eye for detail in code reviews and try to test our code thoroughly.",
-    "steadily.adding.value.title": "Steadily adding value",
-    "steadily.adding.value.part1": "I make estimations with diligence. I'm not easily influenced by pressure or fear. I make sure I understand everything what is needed to deliver before giving an estimation.",
-    "steadily.adding.value.part2": "I strive to give my best effort at a sustainable pace.",
-    "community.of.professionals.title": "A community of professionals",
-    "community.of.professionals.part1": "I embrace different opinions and personalities. I don't let the current way of working impede improvements.",
-    "community.of.professionals.part2": "I am willing to share my knowledge with anyone who is willing to learn. I share my good practices, knowledge and try to learn from everyone myself.",
-    "productive.partnerships.title": "Productive partnerships",
-    "productive.partnerships.part1": "I show respect for the customer and fellow software crafters. I try to behave professionally and ethical every day.",
-    "productive.partnerships.part2": "I'm open and honest to the customer. I do not conceal or embellish.",
-    "productive.partnerships.part3": "I always try to find myself in the interests of the customer in order to build a long-term relationship."
-  },
-  "cv": {
-    "image": "Curriculum Vitae image",
-    "current.role": "Java Software Craftsman",
-    "about.part1": "Dieter is a passionate agile software developer and proudly bears the title of Civil Engineer.",
-    "about.part2": "On his current project, Dieter works for the Federal Public Service Justice, where he helps to develop a challenging application for the processing and storage of documents.",
-    "body": "Hi Dieter%0A%0AI%20would%20like%20access%20to%20your%20personal%20resume%20for%20<insert-reason>.%0AKind%20regards%0A%0A<insert-name>",
-    "receive": "Receive full resume",
-    "expertise": "Expertise",
-    "back-end": "Back-end",
-    "back-end.detail": "Experience mainly with Spring, Java and other related frameworks.",
-    "front-end": "Front-end",
-    "front-end.detail": "The preference is for modern frameworks such as Angular, but Dieter also has experience with older technologies.",
-    "quality-management": "Quality management",
-    "quality-management.detail": "Delivering quality is a priority, which is why Dieter attaches great importance to unit, integration and e2e tests.",
-    "data-technologies": "Data technologies",
-    "data-technologies.detail": "Dieter already has some experience with SQL (e.g. IBM DB2, MySQL) and NoSQL (e.g. CouchDB).",
-    "work.experience": "Work experience",
-    "work.experience1.date": "2016 - present",
-    "work.experience1.title": "Java Software Craftsman",
-    "work.experience1.employer": "Continuum Consulting NV",
-    "work.experience1.place": "Lummen, Belgium",
-    "education": "Education",
-    "education1.date": "2016",
-    "education1.title": "Master of Engineering: Computer Science, Artificial Intelligence",
-    "education1.employer": "University of Leuven",
-    "education1.place": "Leuven, Belgium",
-    "education2.date": "2014",
-    "education2.title": "Bachelor of Science: Computer Science, ICT",
-    "education2.employer": "Université d'Hasselt",
-    "education2.place": "Diepenbeek, Belgique"
-  }
+  "website.welcome.message": "Finally, you're here",
+  "website.introduction.message": "I am Dieter Jordens. This is my online portfolio. Unfortunately, there is not much to see here at the moment, so be sure to come back in the future.",
+  "website.details.message": "I'm {{age}} years old and live in Geetbets, Belgium. This is in a close proximity of Leuven, Brussels and Hasselt. I'm passionate about full stack agile software development and artificial intelligence.",
+  "website.learn.more.about.my.vision": "My vision",
+  "website.change.language": "Change language",
+  "website.home": "Homepage",
+  "website.vision": "My vision",
+  "website.cv": "CV",
+  "website.timeline": "Timeline",
+  "website.data": "More data",
+  "my.vision.what.to.expect.of.me": "What can you expect of me?",
+  "my.vision.what.is.my.vision": "I see Software Development as a craft!",
+  "my.vision.what.is.my.mission": "As a Software Craftsman I try to raise the bar of professional software development by practicing it and helping others to learn the craft. I try to apply the values in the Manifesto for Software Craftsmanship in my daily work.",
+  "my.vision.well.crafted.software.title": "Well-crafted software",
+  "my.vision.well.crafted.software.part1": "My mission is to deliver high quality software. I am humble about my expertise and honest about my capabilities.",
+  "my.vision.well.crafted.software.part2": "I try to be an expert in what I do and to master the technologies and techniques I need to perform my job.",
+  "my.vision.well.crafted.software.part3": "I take full responsibility for the correctness of the code we write in our team. I do not tolerate preventable defects. I have an eye for detail in code reviews and try to test our code thoroughly.",
+  "my.vision.steadily.adding.value.title": "Steadily adding value",
+  "my.vision.steadily.adding.value.part1": "I make estimations with diligence. I'm not easily influenced by pressure or fear. I make sure I understand everything what is needed to deliver before giving an estimation.",
+  "my.vision.steadily.adding.value.part2": "I strive to give my best effort at a sustainable pace.",
+  "my.vision.community.of.professionals.title": "A community of professionals",
+  "my.vision.community.of.professionals.part1": "I embrace different opinions and personalities. I don't let the current way of working impede improvements.",
+  "my.vision.community.of.professionals.part2": "I am willing to share my knowledge with anyone who is willing to learn. I share my good practices, knowledge and try to learn from everyone myself.",
+  "my.vision.productive.partnerships.title": "Productive partnerships",
+  "my.vision.productive.partnerships.part1": "I show respect for the customer and fellow software crafters. I try to behave professionally and ethical every day.",
+  "my.vision.productive.partnerships.part2": "I'm open and honest to the customer. I do not conceal or embellish.",
+  "my.vision.productive.partnerships.part3": "I always try to find myself in the interests of the customer in order to build a long-term relationship.",
+  "cv.image": "Curriculum Vitae image",
+  "cv.current.role": "Java Software Craftsman",
+  "cv.about.part1": "Dieter is a passionate agile software developer and proudly bears the title of Civil Engineer.",
+  "cv.about.part2": "On his current project, Dieter works for the Federal Public Service Justice, where he helps to develop a challenging application for the processing and storage of documents.",
+  "cv.body": "Hi Dieter%0A%0AI%20would%20like%20access%20to%20your%20personal%20resume%20for%20<insert-reason>.%0AKind%20regards%0A%0A<insert-name>",
+  "cv.receive": "Receive full resume",
+  "cv.expertise": "Expertise",
+  "cv.back-end": "Back-end",
+  "cv.back-end.detail": "Experience mainly with Spring, Java and other related frameworks.",
+  "cv.front-end": "Front-end",
+  "cv.front-end.detail": "Dieter prefers modern frameworks such as Angular that allow to build quality software, but Dieter also has experience with other technologies.",
+  "cv.quality-management": "Quality management",
+  "cv.quality-management.detail": "Delivering quality is a priority, which is why Dieter attaches great importance to unit, integration and e2e tests.",
+  "cv.data-technologies": "Data technologies",
+  "cv.data-technologies.detail": "Dieter has working experience with SQL (e.g. IBM DB2, MySQL) and NoSQL (e.g. CouchDB).",
+  "cv.work.experience": "Work experience",
+  "cv.work.experience1.date": "2016 - present",
+  "cv.work.experience1.title": "Java Software Craftsman",
+  "cv.work.experience1.employer": "Continuum Consulting NV",
+  "cv.work.experience1.place": "Lummen, Belgium",
+  "cv.education": "Education",
+  "cv.education1.date": "2016",
+  "cv.education1.title": "Master of Engineering: Computer Science, Artificial Intelligence",
+  "cv.education1.employer": "University of Leuven",
+  "cv.education1.place": "Leuven, Belgium",
+  "cv.education2.date": "2014",
+  "cv.education2.title": "Bachelor of Science: Computer Science, ICT",
+  "cv.education2.employer": "University of Hasselt",
+  "cv.education2.place": "Diepenbeek, Belgique"
 }
