--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -1,64 +1,58 @@
 {
-  "website": {
-    "welcome.message": "Eindelijk ben je hier...",
-    "introduction.message": "Ik ben Dieter Jordens. Dit is mijn online portfolio. Momenteel is hier helaas nog niet veel te zien, kom in de toekomst zeker eens terug.",
-    "details.message": "Ik ben {{age}} jaar oud en woon momenteel in Geetbets, België.... in de nabijheid van Leuven, Brussel en Hasselt. Ik ben gepassioneerd door agile software ontwikkeling (full stack) en artificiële intelligentie.",
-    "learn.more.about.my.vision": "Mijn visie",
-    "change.language": "Verander taal",
-    "home": "Startpagina",
-    "vision": "Mijn visie",
-    "cv": "Curriculum vitae",
-    "timeline": "Tijdlijn",
-    "data": "Meer gegevens"
-  },
-  "my.vision": {
-    "what.to.expect.of.me": "Wat kun je van mij verwachten?",
-    "what.is.my.vision": "Software ontwikkeling is een ambacht!",
-    "what.is.my.mission": "Als Software Craftsman probeer ik de lat van professionele software ontwikkeling hoger te leggen door het in de praktijk te brengen en anderen te helpen om het vak te leren. Ik probeer de waarden uit het Software Craftsmanship Manifesto toe te passen in mijn dagelijks werk.",
-    "well.crafted.software.title": "Goed ontworpen software",
-    "well.crafted.software.part1": "Mijn missie is het afleveren van hoogwaardige software. Ik ben nederig over mijn expertise en eerlijk over mijn capaciteiten.",
-    "well.crafted.software.part2": "Ik probeer een expert te zijn in wat ik doe en de technologieën en technieken te beheersen die ik nodig heb om mijn werk uit te voeren.",
-    "well.crafted.software.part3": "Ik neem de volledige verantwoordelijkheid voor de correctheid van de code die we in ons team schrijven. Ik tolereer geen vermijdbare bugs. Ik heb oog voor detail in code reviews en probeer onze code grondig te testen.",
-    "steadily.adding.value.title": "Geleidelijk waarde toevoegen",
-    "steadily.adding.value.part1": "Ik maak met toewijding schattingen. Ik word niet gemakkelijk beïnvloed door druk of angst. Ik zorg ervoor dat ik alles begrijp wat er nodig is om een schatting te maken voordat ik deze geef.",
-    "steadily.adding.value.part2": "Ik streef ernaar om mijn uiterste best te doen op een vol te houden tempo.",
-    "community.of.professionals.title": "Een gemeenschap van professionals",
-    "community.of.professionals.part1": "Ik omarm verschillende meningen en persoonlijkheden. Ik laat de huidige manier van werken verbeteringen niet in de weg staan.",
-    "community.of.professionals.part2": "Ik ben bereid om mijn kennis te delen met iedereen die de bereidheid heeft om te leren. Ik deel mijn good practices, kennis en probeer zelf van iedereen te leren.",
-    "productive.partnerships.title": "Productieve partnerschappen",
-    "productive.partnerships.part1": "Ik toon respect voor de klant en collega-softwaremakers. Ik probeer me elke dag professioneel en ethisch te gedragen.",
-    "productive.partnerships.part2": "Ik ben open en eerlijk naar de klant toe. Ik verberg noch verfraai niet.",
-    "productive.partnerships.part3": "Ik probeer me altijd in het belang van de klant te vinden om een langdurige relatie op te bouwen."
-  },
-  "cv": {
-    "image": "Curriculum Vitae afbeelding",
-    "current.role": "Java Software Craftsman",
-    "about.part1": "Dieter is een gepassioneerd agile software- ontwikkelaar en draagt met trots de titel van Burgerlijk Ingenieur.",
-    "about.part2": "Op zijn huidig project werkt Dieter voor de federale overheidsdienst Justitie, waar hij meehelpt aan de ontwikkeling van een uitdagende applicatie voor de verwerking en opslag van documenten.",
-    "body": "Hallo Dieter%0A%0AIk%20zou%20graag%20toegang%20krijgen%20tot%20je%20CV%20omdat%20<vul-reden-in>.%0AMet%20vriendelijke%20groeten%0A%0A<vul-naam-in>",
-    "receive": "Ontvang het volledige CV",
-    "expertise": "Expertise",
-    "back-end": "Back-end",
-    "back-end.detail": "Ervaring voornamelijk rond Spring, Java en andere gerelateerde frameworks.",
-    "front-end": "Front-end",
-    "front-end.detail": "De voorkeur gaat uit naar moderne frameworks zoals Angular, maar Dieter heeft ook ervaring met oudere technologieën.",
-    "quality-management": "Kwaliteitsbeheer",
-    "quality-management.detail": "Het opleveren van kwaliteit is prioritair, daarom vindt Dieter unit, integratie en e2e tests erg belangrijk.",
-    "data-technologies": "Datatechnologieën",
-    "data-technologies.detail": "Dieter heeft reeds enige werkervaring met SQL (bijv. IBM DB2, MySQL) en NoSQL (bijv. CouchDB).",
-    "work.experience": "Werkervaring",
-    "work.experience1.date": "2016 - heden",
-    "work.experience1.title": "Java Software Craftsman",
-    "work.experience1.employer": "Continuum Consulting NV",
-    "work.experience1.place": "Lummen, België",
-    "education": "Studies",
-    "education1.date": "2016",
-    "education1.title": "Master in de Ingenieurswetenschappen: Computerwetenschappen, AI",
-    "education1.employer": "Universiteit Leuven",
-    "education1.place": "Leuven, België",
-    "education2.date": "2014",
-    "education2.title": "Bachelor in de Wetenschappen: Computerwetenschappen, ICT",
-    "education2.employer": "Universiteit Hasselt",
-    "education2.place": "Leuven, België"
-  }
+  "website.welcome.message": "Eindelijk ben je hier",
+  "website.introduction.message": "Ik ben Dieter Jordens. Dit is mijn online portfolio. Momenteel is hier helaas nog niet veel te zien, kom in de toekomst zeker eens terug.",
+  "website.details.message": "Ik ben {{age}} jaar oud en woon momenteel in Geetbets, België. Dit is in de nabijheid van Leuven, Brussel en Hasselt. Ik ben gepassioneerd door full-stack agile software ontwikkeling en artificiële intelligentie.",
+  "website.learn.more.about.my.vision": "Mijn visie",
+  "website.change.language": "Verander taal",
+  "website.home": "Startpagina",
+  "website.vision": "Mijn visie",
+  "website.cv": "Curriculum vitae",
+  "website.timeline": "Tijdlijn",
+  "website.data": "Meer gegevens",
+  "my.vision.what.to.expect.of.me": "Wat kun je van mij verwachten?",
+  "my.vision.what.is.my.vision": "Software ontwikkeling is een ambacht!",
+  "my.vision.what.is.my.mission": "Als Software Craftsman probeer ik de lat van professionele software ontwikkeling hoger te leggen door het in de praktijk te brengen en anderen te helpen om het vak te leren. Ik probeer de waarden uit het Software Craftsmanship Manifesto toe te passen in mijn dagelijks werk.",
+  "my.vision.well.crafted.software.title": "Goed ontworpen software",
+  "my.vision.well.crafted.software.part1": "Mijn missie is het afleveren van hoogwaardige software. Ik ben nederig over mijn expertise en eerlijk over mijn capaciteiten.",
+  "my.vision.well.crafted.software.part2": "Ik probeer een expert te zijn in wat ik doe en de technologieën en technieken te beheersen die ik nodig heb om mijn werk uit te voeren.",
+  "my.vision.well.crafted.software.part3": "Ik neem de volledige verantwoordelijkheid voor de correctheid van de code die we in ons team schrijven. Ik tolereer geen vermijdbare bugs. Ik heb oog voor detail in code reviews en probeer onze code grondig te testen.",
+  "my.vision.steadily.adding.value.title": "Geleidelijk waarde toevoegen",
+  "my.vision.steadily.adding.value.part1": "Ik maak met toewijding schattingen. Ik word niet gemakkelijk beïnvloed door druk of angst. Ik zorg ervoor dat ik alles begrijp wat er nodig is om een schatting te maken voordat ik deze geef.",
+  "my.vision.steadily.adding.value.part2": "Ik streef ernaar om mijn uiterste best te doen op een vol te houden tempo.",
+  "my.vision.community.of.professionals.title": "Een gemeenschap van professionals",
+  "my.vision.community.of.professionals.part1": "Ik omarm verschillende meningen en persoonlijkheden. Ik laat de huidige manier van werken verbeteringen niet in de weg staan.",
+  "my.vision.community.of.professionals.part2": "Ik ben bereid om mijn kennis te delen met iedereen die de bereidheid heeft om te leren. Ik deel mijn good practices, kennis en probeer zelf van iedereen te leren.",
+  "my.vision.productive.partnerships.title": "Productieve partnerschappen",
+  "my.vision.productive.partnerships.part1": "Ik toon respect voor de klant en collega-softwaremakers. Ik probeer me elke dag professioneel en ethisch te gedragen.",
+  "my.vision.productive.partnerships.part2": "Ik ben open en eerlijk naar de klant toe. Ik verberg noch verfraai niet.",
+  "my.vision.productive.partnerships.part3": "Ik probeer me altijd in het belang van de klant te vinden om een langdurige relatie op te bouwen.",
+  "cv.image": "Curriculum Vitae afbeelding",
+  "cv.current.role": "Java Software Craftsman",
+  "cv.about.part1": "Dieter is een gepassioneerd agile software- ontwikkelaar en draagt met trots de titel van Burgerlijk Ingenieur.",
+  "cv.about.part2": "Op zijn huidig project werkt Dieter voor de federale overheidsdienst Justitie, waar hij meehelpt aan de ontwikkeling van een uitdagende applicatie voor de verwerking en opslag van documenten.",
+  "cv.body": "Hallo Dieter%0A%0AIk%20zou%20graag%20toegang%20krijgen%20tot%20je%20CV%20omdat%20<vul-reden-in>.%0AMet%20vriendelijke%20groeten%0A%0A<vul-naam-in>",
+  "cv.receive": "Ontvang het volledige CV",
+  "cv.expertise": "Expertise",
+  "cv.back-end": "Back-end",
+  "cv.back-end.detail": "Ervaring voornamelijk rond Spring, Java en andere gerelateerde frameworks.",
+  "cv.front-end": "Front-end",
+  "cv.front-end.detail": "De voorkeur gaat uit naar moderne frameworks zoals Angular, maar Dieter heeft ook ervaring met oudere technologieën.",
+  "cv.quality-management": "Kwaliteitsbeheer",
+  "cv.quality-management.detail": "Het opleveren van kwaliteit is prioritair, daarom vindt Dieter unit, integratie en e2e tests erg belangrijk.",
+  "cv.data-technologies": "Datatechnologieën",
+  "cv.data-technologies.detail": "Dieter heeft werkervaring met SQL (bijv. IBM DB2, MySQL) en NoSQL (bijv. CouchDB).",
+  "cv.work.experience": "Werkervaring",
+  "cv.work.experience1.date": "2016 - heden",
+  "cv.work.experience1.title": "Java Software Craftsman",
+  "cv.work.experience1.employer": "Continuum Consulting NV",
+  "cv.work.experience1.place": "Lummen, België",
+  "cv.education": "Studies",
+  "cv.education1.date": "2016",
+  "cv.education1.title": "Master in de Ingenieurswetenschappen: Computerwetenschappen, AI",
+  "cv.education1.employer": "Universiteit Leuven",
+  "cv.education1.place": "Leuven, België",
+  "cv.education2.date": "2014",
+  "cv.education2.title": "Bachelor in de Wetenschappen: Computerwetenschappen, ICT",
+  "cv.education2.employer": "Universiteit Hasselt",
+  "cv.education2.place": "Leuven, België"
 }
