--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -11,7 +11,7 @@
   "website.data": "More data",
   "my.vision.what.to.expect.of.me": "What can you expect of me?",
   "my.vision.what.is.my.vision": "I see Software Development as a craft!",
-  "my.vision.what.is.my.mission": "As a Software Craftsman I try to raise the bar of professional software development by practicing it and helping others to learn the craft. I try to apply the values in the Manifesto for Software Craftsmanship in my daily work.",
+  "my.vision.what.is.my.mission": "As a Software Craftsman I try to raise the bar for professional software development by practicing it and helping others to learn the craft. I try to apply the values in the Manifesto for Software Craftsmanship in my daily work.",
   "my.vision.well.crafted.software.title": "Well-crafted software",
   "my.vision.well.crafted.software.part1": "My mission is to deliver high quality software. I am humble about my expertise and honest about my capabilities.",
   "my.vision.well.crafted.software.part2": "I try to be an expert in what I do and to master the technologies and techniques I need to perform my job.",
@@ -28,8 +28,7 @@
   "my.vision.productive.partnerships.part3": "I always try to find myself in the interests of the customer in order to build a long-term relationship.",
   "cv.image": "Curriculum Vitae image",
   "cv.current.role": "Java Software Craftsman",
-  "cv.about.part1": "Dieter is a passionate agile software developer and proudly bears the title of Civil Engineer.",
-  "cv.about.part2": "On his current project, Dieter works for the Federal Public Service Justice, where he helps to develop a challenging application for the processing and storage of documents.",
+  "cv.about": "Dieter is a passionate agile software developer and proudly bears the title of Civil Engineer. On his current project, Dieter works for the Federal Public Service Justice, where he helps to develop a challenging application for the processing and storage of documents.",
   "cv.body": "Hi Dieter%0A%0AI%20would%20like%20access%20to%20your%20personal%20resume%20for%20<insert-reason>.%0AKind%20regards%0A%0A<insert-name>",
   "cv.receive": "Receive full resume",
   "cv.expertise": "Expertise",
