--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -28,8 +28,7 @@
   "my.vision.productive.partnerships.part3": "J'essaie toujours de me trouver dans l'intérêt du client afin de construire une relation à long terme.",
   "cv.image": "Curriculum Vitae image",
   "cv.current.role": "Java Software Craftsman",
-  "cv.about.part1": "Dieter est un développeur de logiciels agile passionné et porte fièrement le titre d'ingénieur civil.",
-  "cv.about.part2": "Dans le cadre de son projet actuel, Dieter travaille pour le Service Public Fédéral Justice, où il aide à développer une application stimulante pour le traitement et le stockage des documents.",
+  "cv.about": "Dieter est un développeur de logiciels agile passionné et porte fièrement le titre d'ingénieur civil. Dans le cadre de son projet actuel, Dieter travaille pour le Service Public Fédéral Justice, où il aide à développer une application stimulante pour le traitement et le stockage des documents.",
   "cv.body": "Hi Dieter%0A%0AJ'aimerais%20avoir%20accès%20à%20votre%20CV%20personnel%20pour<remplir-la-raison>.%0AMeilleures%20salutations%0A%0A<remplir-le-nom>",
   "cv.receive": "Recevoir le CV complet",
   "cv.expertise": "Expertise",
