--- a/src/assets/translation/en.json
+++ b/src/assets/translation/en.json
@@ -53,5 +53,9 @@
   "cv.education2.date": "2014",
   "cv.education2.title": "Bachelor of Science: Computer Science, ICT",
   "cv.education2.employer": "University of Hasselt",
-  "cv.education2.place": "Diepenbeek, Belgique"
+  "cv.education2.place": "Diepenbeek, Belgique",
+  "data.books.description": "Here you can find every book I've read since the start of my professional career back in 2016.",
+  "data.book.title": "Title",
+  "data.book.authors": "Authors",
+  "data.book.year.read": "Year read"
 }
