--- a/src/assets/translation/fr.json
+++ b/src/assets/translation/fr.json
@@ -1,4 +1,5 @@
 {
+  "current.language": "fr",
   "website.welcome.message": "Enfin, vous êtes là",
   "website.introduction.message": "Je suis Dieter Jordens. Voici mon portfolio en ligne. Malheureusement, il n'y a pas grand-chose à voir ici pour le moment, alors n'hésitez pas à revenir dans le futur.",
   "website.details.message": "J'ai {{age}} ans et j'habite actuellement à Geetbets, en Belgique. C'est à proximité de Louvain, Bruxelles et Hasselt. Je suis passionné par le le développement de logiciels agiles (full-stack) et l'intelligence artificielle.",
