--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -1,4 +1,5 @@
 {
+  "current.language": "nl",
   "website.welcome.message": "Eindelijk ben je hier",
   "website.introduction.message": "Ik ben Dieter Jordens. Dit is mijn online portfolio. Momenteel is hier helaas nog niet veel te zien, kom in de toekomst zeker eens terug.",
   "website.details.message": "Ik ben {{age}} jaar oud en woon momenteel in Geetbets, België. Dit is in de nabijheid van Leuven, Brussel en Hasselt. Ik ben gepassioneerd door full-stack agile software ontwikkeling en artificiële intelligentie.",
