--- a/src/assets/translation/nl.json
+++ b/src/assets/translation/nl.json
@@ -8,7 +8,7 @@
   "website.home": "Startpagina",
   "website.vision": "Mijn visie",
   "website.cv": "Curriculum vitae",
-  "website.timeline": "Tijdlijn",
+  "website.projects": "Projecten",
   "website.data": "Meer gegevens",
   "my.vision.what.to.expect.of.me": "Wat kun je van mij verwachten?",
   "my.vision.what.is.my.vision": "Software ontwikkeling is een ambacht!",
@@ -60,5 +60,7 @@
   "data.book.authors": "Auteurs",
   "data.book.year.read": "Jaar gelezen",
   "data.books.search": "Zoek",
-  "data.books.title": "Boeken"
+  "data.books.title": "Boeken",
+  "projects.title": "Projecten",
+  "projects.description": "Hier vind je de projecten die ik in mijn carrière als consultant heb gedaan. De projecten zijn gesorteerd op startdatum, het meest recente eerst."
 }
